--- a/desafios/des012/cordel.html
+++ b/desafios/des012/cordel.html
@@ -26,7 +26,7 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="firstbackground">
     <p>
         Não é mais como era antes <br>
         É tudo abreviado <br>
@@ -60,7 +60,7 @@
     </p>
 </section>
 
-<section class="imagem">
+<section class="imagem" id="secondbackground">
     <p>
         Tenho saudade das cartas <br>
         Escritas com a própria mão <br>
