Desafios de tabelas

--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -4,8 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela 02</title>
+    <style>
+        table {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 800px;
+            text-align: left;
+            border: 2px solid black;
+            position: relative;
+        }
+
+        caption {
+            padding: 16px;
+            border: 2px solid black;
+            border-bottom: 0px;
+            font-weight: bold;
+            font-size: 1.5em;
+            background-color: lightgrey;          
+        }
+
+        tbody {
+            background-color: white;
+            font-weight: normal;
+        }
+
+        tbody > tr:nth-child(2n) {
+            background-color: lightgrey;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: grey;
+        }
+
+        thead, tfoot {
+            font-weight: bolder;
+            background-color: grey;
+            color: white;
+        }
+
+        td, th {
+            border: 1px solid black;
+            padding: 20px;
+        }
+
+    </style>
 </head>
 <body>
-    <h1>Tabela</h1>
+    <table>
+        <caption>População por Unidades Federativas</caption>
+        <thead>
+            <tr>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
+                <th scope="col">País comparável</th>
+            </tr>
+        </thead>    
+            <tbody>
+                <tr>
+                    <td>São Paulo</td>
+                    <td>46 081 801</td>
+                    <td>Argentina</td>
+                <tr>
+                    <td>Minas Gerais</td>
+                    <td>21 393 441</td>
+                    <td>Chade</td>
+                </tr>
+                <tr>
+                    <td>Rio de Janeiro</td>
+                    <td>17 223 547</td>
+                    <td>Zimbabwe</td>
+                </tr>
+                <tr>
+                    <td>Bahia</td>
+                    <td>14 870 907</td>
+                    <td>Benim</td>
+                </tr>
+                <tr>
+                    <td>Paraná</td>
+                    <td>11 890 517</td>
+                    <td>Haiti</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th scope="row">População Total</th>
+                    <td>111 493 101</td>
+                    <td>Egito</td>
+                </tr>
+                </tr>
+            </tfoot>
+    </table>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero animi voluptatibus, harum et dolore nihil recusandae architecto, eveniet esse voluptas, quisquam aut magnam. Magnam, molestias quod quam odit ab inventore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo ducimus magni molestias minima veritatis iure, velit dolorum quo placeat ab repellendus suscipit modi nemo vitae id repudiandae corporis quia magnam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem quo eius vel vero repellat facilis consequatur. Quas ipsum assumenda ratione animi, earum rem est natus explicabo quidem. Magnam, dolorum rerum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam adipisci laborum, id nam harum maiores asperiores fugiat accusamus voluptatibus illo placeat, in possimus iste quaerat temporibus quasi. Ab, optio voluptatum. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quo eius voluptatibus officiis. Minus recusandae placeat assumenda? Fugit iste provident quidem sit tempora tenetur odio, in vitae nam neque exercitationem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora laboriosam veniam facilis ex, reiciendis officia alias consectetur excepturi soluta. Dolores nobis dolor repudiandae ratione ut quibusdam quos suscipit blanditiis animi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem architecto quibusdam veritatis animi nulla voluptate cupiditate provident dicta ratione placeat et rerum ut, numquam tempore aspernatur. Similique modi maxime aspernatur! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate qui ut possimus veniam voluptatum, animi placeat eveniet accusamus saepe ipsum sunt maxime error omnis asperiores? Aperiam, pariatur? Iste, harum officiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae accusantium, amet ullam velit delectus, unde atque, officiis enim eaque aliquid deserunt dignissimos nemo quae cupiditate dolore tempore quibusdam. Sapiente, veritatis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates beatae veniam architecto, atque repudiandae itaque aliquid rem esse, cumque ratione, labore nostrum eaque ducimus. Cumque culpa doloribus nesciunt doloremque veritatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. At rem eum atque maiores. Nihil ex tenetur culpa. Quia odit sapiente qui, magnam explicabo ipsum soluta debitis iusto cupiditate, molestiae quis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dignissimos consequuntur repudiandae architecto. Sunt voluptatibus mollitia eum consectetur eveniet voluptatum nisi ipsa, impedit, vel ex consequatur enim dignissimos voluptas quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores cum soluta doloremque a tenetur nam sunt dolores labore delectus numquam quod magnam, animi enim est facilis rem aspernatur nemo temporibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio dolor accusamus culpa omnis, commodi odio quas a nesciunt deserunt expedita rerum reprehenderit libero, laboriosam ad autem aspernatur impedit repudiandae officia. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum commodi magnam veritatis qui amet distinctio, voluptate nesciunt molestias? Nemo sed similique non assumenda officia asperiores reprehenderit facilis aliquid eum atque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorem cum ullam hic aspernatur voluptas nam delectus nesciunt veniam in facilis quibusdam velit, minus a rem? Facilis error doloremque quasi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, nulla pariatur ut ducimus totam voluptas, ipsum necessitatibus alias cum ipsam excepturi inventore voluptates sint consectetur mollitia consequuntur quasi aut incidunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo molestias saepe corrupti, placeat, quasi distinctio nisi illo non ab ut ad sint tempore maiores veniam facilis voluptatum vitae quidem ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptas iusto similique saepe blanditiis minima reprehenderit excepturi, soluta illum, architecto laboriosam sint illo placeat cupiditate nisi unde eaque molestias pariatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vero quis tenetur, quisquam, provident excepturi aperiam quibusdam magnam quae porro iusto nostrum in. Cupiditate consectetur repellat adipisci fugit repudiandae veritatis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea eius aspernatur debitis maiores odio veniam nesciunt provident inventore facilis consequuntur. Suscipit amet iste quibusdam eum dolore in repellendus quas aut! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores dolor facilis at optio perferendis earum corrupti beatae ipsum obcaecati et tenetur dicta saepe delectus ratione, quas nam nostrum asperiores? Minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sequi, atque dolores laudantium earum blanditiis porro eaque expedita, mollitia magni repudiandae ipsam, quas dolor cum doloribus eveniet illum! Iure, assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate quae illo ipsa doloribus vero autem delectus nemo ullam ad incidunt, rem et eos voluptatem quibusdam laboriosam corporis vitae! Et, doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ut ipsa sunt, laborum et nesciunt nisi quis quam ullam ea aut suscipit dolor repellat? Esse explicabo optio ab accusamus libero? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta fugit atque doloremque autem, quas voluptate vel aliquid neque earum dignissimos nostrum a esse, temporibus facilis sint cumque itaque quaerat id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium vel omnis molestias tempore excepturi, sit atque pariatur sed tenetur est sunt exercitationem. Cumque eaque, dolorem tempora quasi incidunt aut fugiat? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore similique, natus facilis quos impedit sint aperiam expedita non sapiente earum molestias consequatur fugit debitis porro sit, possimus, numquam consectetur quaerat! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi expedita exercitationem modi ipsa officiis accusantium iure voluptatibus magni dolores odit, unde, voluptates atque, reprehenderit facere molestias minima neque voluptas quae! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem ex quam eius magni tempora laborum illo commodi aspernatur? Harum sed eaque laboriosam facere et dolores porro rerum, accusamus similique est? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum sunt blanditiis quisquam iure dignissimos nihil dolorum corporis quis magnam totam repudiandae, impedit sed? Error numquam, facilis asperiores a repellat optio.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quisquam perspiciatis, natus ipsam reprehenderit hic aperiam quibusdam est cupiditate magnam perferendis dicta vero culpa tempore itaque tenetur exercitationem vel id.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, optio ipsum! Possimus eius dignissimos repudiandae dicta ipsa a aliquam consequuntur ab fugiat neque animi, numquam modi natus alias sequi eligendi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, modi ut reiciendis voluptatum voluptatem sapiente atque tenetur quae iusto fugit vel adipisci. Impedit, atque suscipit! Amet laboriosam molestiae ullam blanditiis.
+    </p>
 </body>
 </html>
